--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=spring
 server.error.include-message=always
 
+image.root=L:\\wip\\biodis\\src\\main\\resources\\uploads\\
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/biodis
 spring.datasource.username=postgres
 spring.datasource.password=43710
@@ -11,3 +13,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.properties.javax.persistence.validation.mode=none
+
+
+# Specify directories or files to watch (optional)
+spring.devtools.restart.additional-paths=src/main/java
+
+# Enable live reload (default is true)
+spring.devtools.livereload.enabled=true
