--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <version>9.1.22</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
         <!-- iText (Optional for more advanced PDF generation) -->
         <dependency>
             <groupId>com.itextpdf</groupId>
